# chaptermarkers

./: .bumpversion.cfg  .dockerignore  .gitignore  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
chaptermarkers/: __init__.py  chaptermarkers.py
docs/: chaptermarkers.rst  conf.py  index.rst  installation.rst  modules.rst  usage.rst
examples/: chapters.txt
requirements/: dev.txt  test.txt
stests/: __init__.py  common_resources.robot  default_suite.robot
utests/: __init__.py  test_python_chaptermarkers.py
