[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[flake8]
ignore = D203,E501
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10

[pylint]
disable=W0511,W1401,R0902,R0903,R0904
ignore-docstrings=yes
output-format=parseable
msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"
